Merged PR 26809: Bluefin portal improvement
Related work items: #316406